k8s/application/api-gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: eventstream
  labels:
    app: api-gateway

spec:
  type: LoadBalancer

  selector:
    app: api-gateway

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
